Fix alignment arrows small screens.

--- a/play-media/src/styles/components/Slider/SliderModal.css
+++ b/play-media/src/styles/components/Slider/SliderModal.css
@@ -6,10 +6,10 @@
   }
 
   .swiper-button-next {
-    @apply 2xl:-right-16;
+    @apply top-[30vh] 2xl:-right-16;
   }
 
   .swiper-button-prev {
-    @apply 2xl:-left-16;
+    @apply top-[30vh] 2xl:-left-16;
   }
 }
